k8s/localhost/setrr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: setrr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: setrr
  template:
    metadata:
      labels:
        app: setrr
    spec:
      containers:
        - name: setrr
          image: localhost:5001/denislabelle/setrr:0.0.18
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: setrr-service
spec:
  selector:
    app: setrr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
