k8s/localhost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  annotations:
    # Warning: annotation "kubernetes.io/ingress.class" is deprecated, use 'spec.ingressClassName' instead
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "TCP"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: "nginx"
  rules:
    - host: denlab.com
      http:
        paths:
          # Existing web service configuration
          - pathType: Prefix
            path: "/leads"
            backend:
              service:
                name: setrr-service
                port:
                  number: 8080
    - host: postgres.denlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postgres
                port:
                  number: 5432
